# regedit

./: .gitignore  CMakeLists.txt  README.md  build.sh  build.zig  build.zig.zon
src/: cmdline.zig  hive.h  hive.zig  main.c  main.zig
